changed logo ref

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="recipes.html">Recipes</a>
             </div>
             <div class="nav-center">
-                <a href="/" class="logo">OliaRosa</a>
+                <a href="index.html" class="logo">OliaRosa</a>
             </div>
             <div class="nav-right">
                 <a href="faq.html">FAQ</a>
