--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,7 @@
                 <a href="recipes.html" class="current-page">Recipes</a>
             </div>
             <div class="nav-center">
-                <a href="/" class="logo">OliaRosa</a>
+                <a href="index.html" class="logo">OliaRosa</a>
             </div>
             <div class="nav-right">
                 <a href="faq.html">FAQ</a>
