--- a/faq.html
+++ b/faq.html
@@ -23,8 +23,8 @@
             </div>
             <div class="nav-right">
                 <a href="faq.html" class = "current-page">FAQ</a>
-                <a href="https://instagram.com/fortheloveofevoo?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="nav-icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="cart.html" class="nav-icon"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="https://www.instagram.com/fortheloveofevoo/?hl=en" class="nav-icon" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="cart.html" class="nav-icon" aria-label="Cart"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </nav>
     </header>
