--- a/index.html
+++ b/index.html
@@ -21,29 +21,27 @@
             </div>
             <div class="nav-right">
                 <a href="faq.html">FAQ</a>
-                <a href="https://instagram.com/fortheloveofevoo?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="nav-icon"><i class="fa-brands fa-instagram"></i></a>             
-                <a href="cart.html" class="nav-icon"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="https://www.instagram.com/fortheloveofevoo/?hl=en" class="nav-icon" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>             
+                <a href="cart.html" class="nav-icon"  aria-label="Cart"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </nav>
     </header>
     <div class="index-background" style="background-image: url('images/olives.jpg');"></div>
     <div class="container">
-        <header>
-            <h1>About Our Family Business</h1>
-        </header>
+        <h1> The Remarkable Father-Daughter Duo</h1>
         <!-- Our Story Section -->
-        <section class="our-story">
+        <div class="our-story">
             <div class="story-item">
                 <div class="story-image">
                     <img src="images/pair.jpeg" alt="Father-daughter duo: Leonardo and Rosa">
                 </div>
                 <div class="story-text">
-                    In the lush, sun-kissed landscapes of Puglia, Italy, where olive trees stretch as far as the eye can see, a remarkable story of tradition and passion unfolds. Rosa Quitadamo, a dynamic and visionary entrepreneur, embarked on a journey to bring the essence of her heritage to the world through the export of extra virgin olive oil. Inspired by the enduring legacy of her father, a traditional farmer devoted to the land and its bounties, Rosa set forth to continue his legacy.
+                    Rosa Quitadamo, a dynamic and visionary entrepreneur, embarked on a journey to bring the essence of her heritage to the world through the export of extra virgin olive oil.
                     Her father, at the venerable age of 80, still tends to the olive groves with a dedication that transcends time. For Rosa, this venture is more than a business; it's a heartfelt mission to spread knowledge about authentic, good-quality olive oil. Her commitment to fair trade is not just about equitable commerce but about respecting the toil and love that goes into every drop of oil.
                     
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- Bios Section -->
         <section class="bio">
